core-engine/k8s-mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: coreengine-mysql
  labels:
    app: coreengine-mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: coreengine-mysql
  template:
    metadata:
      name: coreengine-mysql
      labels:
        app: coreengine-mysql
    spec:
      containers:
        - name: coreengine-mysql
          image: mysql:8.0
          imagePullPolicy: IfNotPresent
          volumeMounts:
#            - 这边要对应到 mysql 的数据存储的位置
#            - 通过 MySQL 的配置可以改这个目录
            - mountPath: /var/lib/mysql
              name: mysql-storage
          ports:
            - containerPort: 3306
#        - name: coreengine-live-hadoop
      restartPolicy: Always
      volumes:
        - name: mysql-storage
          persistentVolumeClaim:
            claimName: coreengine-mysql-claim-v3
#        - name: hadoop-storage
#          persistentVolumeClaim:
#            claimName: coreengine-hadoop-live-claim
