core-engine/k8s-redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: coreengine-redis
  labels:
    app: coreengine-redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: coreengine-redis
  template:
    metadata:
      name: coreengine-redis
      labels:
        app: coreengine-redis
    spec:
      containers:
        - name: coreengine-redis
          image: redis:latest
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
