core-engine/k8s-coreengine-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: coreengine
spec:
  #  ClusterIP
  type: LoadBalancer
  selector:
    app: coreengine
  ports:
    - protocol: TCP
      name: http
      port: 81
      targetPort: 3002
