core-engine/k8s-mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: testengine-live-mysql
spec:
  selector:
    app: testengine-live-mysql
  ports:
    - protocol: TCP
#      访问的端口
      port: 11309
#      port: 3308
      targetPort: 3306
      nodePort: 30002
  type: NodePort
