core-engine/k8s-redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: coreengine-redis
spec:
  selector:
    app: coreengine-redis
  ports:
    - protocol: TCP
#      port: 6380
      port: 11479
#      Redis 默认端口
      targetPort: 6379
      nodePort: 30003
  type: NodePort
